# fastapi_google_maps_scaper

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  description.md  entrypoint.sh  main.py  pyproject.toml  requirements.txt  scraped_data.csv
app/: crud.py  models.py  utils.py
app/alembic/: env.py
app/alembic/versions/: 04111bbfe33b_education.py  094b2b12d289_add_other_info_business.py  116e875b0c1e_кñremake_transaction.py  12b98738c09e_status_search_history.py  19404f740ec8_street_people.py  1ad84ab6b7ed_.py  289529cc62d9_free_credits.py  2d8d5e4d01d7_str.py  2e19d043b884_business_log_add_2.py  335e8ae42212_transactions.py  36f18e394393_status_search_history.py  37fa7433d358_people_lead_work_house.py  3b12b5ce24e4_.py  3b82d2666240_reserved_credits.py  3d4f6032c51c_float_user_model.py  458ea5c4d23c_add_avatar.py  50ac64bc58b8_first_commit.py  5140e3cdaff6_webhook_events.py  5907b6bdd7b8_bussiness_owner.py  5940b16cb8e2_вdatetime.py  5ad88f51406c_.py  5ae7a44ff982_none.py  5c226d765cae_ðadd_owner_and_conpany_email.py  5f2abf91ae80_remove_free.py  636fc5d3fa36_.py  637217d3d77b_.py  63d6808554ee_.py  66d8474ef5a9_add_credits_purch_to_transaction.py  690311c1c05d_people_lead_work_house.py  789c90d72c43_.py  78d5919d4488_add_ticket.py  80c7c767b1a7_user_none_in_search_history.py  81b42b47d626_.py  87253d2717ce_.py  8c8c8022ac05_search_history.py  8d5763b0f13f_phone_valid.py  8e015e72ed7e_add_time_update.py  927bbcb3e790_add_2_field_user_model.py  99cdfeba0bcd_.py  9a11e6da3e1e_remove_logs.py  (+24 more)
app/api/: deps.py  main.py  write_to_csv.py
app/api/internal/: scraper.py
app/api/routes/: business_types.py  country.py  locations.py  scraped_data.py  users.py
app/core/: config.py  db.py  logs.py
app/core/logs/: logs.py
app/core/tasks/: process_scraped_data.py  send_support_email.py
app/fixtures/: business_types.py  scraped_data.csv  scraped_data.py
app/tests/: conftest.py
app/workflows/: credits.py  scraper.py  transactions.py  webhooks.py
backend/app/: models.py
backend/app/alembic/: env.py
(+20 files in other folders)
